sostituito in index.html del testo e riferimento a immagine 2 della location

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     <section id="chiesa" class="reveal">
       <h2 class="section-title">Cerimonia</h2>
       <p class="muted mb-18">
-        La cerimonia si terrà nella storica Chiesa di <strong>Maria SS del Rosario del Rosario</strong> alle ore
-        <strong>11.00</strong>. Ti aspettiamo con qualche minuto di anticipo per accomodarti con calma.
+        La cerimonia si terrà nella storica Chiesa di <strong>Maria SS del Rosario di Beltiglio</strong> alle ore
+        <strong>11.00</strong>. Ti aspettiamo con qualche minuto di anticipo per per vivere insieme l'inizio della celebrazione.
       </p>
 
       <p class="with-icon">
@@ -164,7 +164,7 @@
     <section id="location">
       <h2 class="section-title">La Location</h2>
       <p class="muted mb-18">
-        Uno spazio elegante immerso nel cuore della natura sannita, perfetto per celebrare insieme.
+        Uno spazio elegante immerso nel cuore della natura sannita, ideale per condividere questo giorno con voi.
         Palazzo Pecci è un gioiello architettonico che custodisce secoli di storia (San Leucio del Sannio, Benevento).
       </p>
 
@@ -180,7 +180,7 @@
 
       <div class="gallery">
         <img class="g-span-7" src="images/location-1.jpg" alt="Giardino della location al tramonto" />
-        <img class="g-span-5" src="images/location-2.jpg" alt="Dettaglio allestimento tavoli" />
+        <img class="g-span-5" src="images/location-2.JPG" alt="Dettaglio allestimento tavoli" />
         <img class="g-span-4" src="images/location-3.jpg" alt="Ingresso principale della struttura" />
         <img class="g-span-8" src="images/location-4.jpg" alt="Vista panoramica degli esterni" />
       </div>
